@@ -1,7 +1,17 @@
 # Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.61)
 AC_INIT(Doxyfile.in)
+AC_CONFIG_AUX_DIR([../build-aux])
 AM_INIT_AUTOMAKE(uriparser, 0.7.2)
+
+
+## Nested configure hacks
+CALLED_BY_PARENT=0
+AC_ARG_ENABLE(doc, [], [
+	CALLED_BY_PARENT=1
+], [])
+AM_CONDITIONAL(CALLED_BY_PARENT, test x${CALLED_BY_PARENT} = x1)
+
 
 ## Doxygen
 AC_CHECK_PROG(DOXY_CHECK, doxygen, found, missing)
@@ -18,18 +28,17 @@ fi
 
 
 ## HTML help
-host_triplet=`../config.guess`
+host_triplet=`${ac_config_guess}`
 if grep cygwin <<<"${host_triplet}" >/dev/null ; then
-    GENERATE_HTMLHELP=YES
+	GENERATE_HTMLHELP=YES
 else
-    GENERATE_HTMLHELP=NO
+	GENERATE_HTMLHELP=NO
 fi
 AC_SUBST(GENERATE_HTMLHELP)
 
 
 AC_CONFIG_FILES([
-    Doxyfile
-    Makefile
+	Doxyfile
+	Makefile
 ])
 AC_OUTPUT
-
