@@ -1,6 +1,7 @@
 ???
 
-  * Changed: Minor build system changes:
+  * Changed: Build system changes:
+      - configure option --enable-doc added
       - renamed configure.in to configure.ac
       - moved some Autotools files to build-aux directory
 
